--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
       <!-- End Section Title -->
 
       <div class="container">
-        <div class="row gy-4">
+        <div class="row gy-4 justify-content-center">
           <div class="col-lg-8 d-flex flex-column justify-content-center">
             <h5 style="text-align: justify;">
               Somos una firma de auditoria multidisciplinaria, con un equipo capacitado en la búsqueda de la excelencia
@@ -301,7 +301,7 @@
       </div>
       <!-- End Section Title -->
       <div class="container">
-        <div class="row gy-4">
+        <div class="row gy-4 justify-content-center">
           <div class="col-lg-8 d-flex flex-column justify-content-center">
             <h5 style="text-align: justify;">
               Conformarnos como una empresa líder y solida a nivel nacional, en la gestión y manejo de servicios
@@ -478,11 +478,14 @@
       </div>
       <!-- End Section Title -->
 
-      <div class="container" id="auditorias">
-        <h3>Auditorías</h3>
-        <p>En Auditores Asociados S.A., ofrecemos un portafolio completo de servicios de auditoría diseñados para
-          fortalecer su empresa, garantizar el cumplimiento y proporcionar la confianza que necesita para tomar
-          decisiones estratégicas.</p>
+      <div class="container">
+        <div id="auditorias">
+          <h3>Auditorías</h3>
+          <p>En Auditores Asociados S.A., ofrecemos un portafolio completo de servicios de auditoría diseñados para
+            fortalecer su empresa, garantizar el cumplimiento y proporcionar la confianza que necesita para tomar
+            decisiones estratégicas.</p>
+        </div>
+
         <div class="row gy-3">
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
@@ -496,8 +499,8 @@
           </div>
           <!-- End servicios Item -->
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="servicios-item featured" id="auditoria-forense">
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400" id="auditoria-forense">
+            <div class="servicios-item featured">
               <h3>Auditoría Forense</h3>
               <p style="text-align: justify;">Cuando sospecha de irregularidades, fraude o malas prácticas, nuestro
                 equipo especializado interviene para investigar y documentar la evidencia. Realizamos un análisis
@@ -507,62 +510,180 @@
           </div>
           <!-- End servicios Item -->
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="servicios-item featured" id="auditoria-fiscal">
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400" id="auditoria-fiscal">
+            <div class="servicios-item featured">
               <h3>Auditoría Fiscal</h3>
-              <p style="text-align: justify;">Garantice el correcto y oportuno cumplimiento de sus obligaciones tributarias. Evaluamos su situación fiscal para asegurar que se apegue a la legislación vigente, identificando riesgos y oportunidades de optimización. Nuestro objetivo es darle tranquilidad ante la administración tributaria y evitar sanciones innecesarias.</p>
+              <p style="text-align: justify;">Garantice el correcto y oportuno cumplimiento de sus obligaciones
+                tributarias. Evaluamos su situación fiscal para asegurar que se apegue a la legislación vigente,
+                identificando riesgos y oportunidades de optimización. Nuestro objetivo es darle tranquilidad ante la
+                administración tributaria y evitar sanciones innecesarias.</p>
             </div>
           </div>
           <!-- End servicios Item -->
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="servicios-item featured" id="auditoria-operativa">
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400" id="auditoria-operativa">
+            <div class="servicios-item featured">
               <h3>Auditoría Operativa</h3>
-              <p style="text-align: justify;">Analizamos la eficiencia y eficacia de sus procesos internos. Evaluamos cómo se utilizan sus recursos (humanos, materiales y tecnológicos) para identificar cuellos de botella, reducir costos y mejorar la productividad. Le entregamos recomendaciones prácticas para optimizar sus operaciones y potenciar su rentabilidad.</p>
+              <p style="text-align: justify;">Analizamos la eficiencia y eficacia de sus procesos internos. Evaluamos
+                cómo se utilizan sus recursos (humanos, materiales y tecnológicos) para identificar cuellos de botella,
+                reducir costos y mejorar la productividad. Le entregamos recomendaciones prácticas para optimizar sus
+                operaciones y potenciar su rentabilidad.</p>
             </div>
           </div>
           <!-- End servicios Item -->
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="servicios-item featured" id="auditoria-cumplimiento">
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400" id="auditoria-cumplimiento">
+            <div class="servicios-item featured">
               <h3>Auditoría de Cumplimiento</h3>
-              <p style="text-align: justify;">Verificamos que su organización opera en conformidad con las leyes, regulaciones, contratos y políticas internas que le aplican. Este servicio es clave para mitigar riesgos legales y proteger la reputación de su empresa, asegurando que todas las actividades se desarrollen dentro del marco normativo correspondiente.</p>
+              <p style="text-align: justify;">Verificamos que su organización opera en conformidad con las leyes,
+                regulaciones, contratos y políticas internas que le aplican. Este servicio es clave para mitigar riesgos
+                legales y proteger la reputación de su empresa, asegurando que todas las actividades se desarrollen
+                dentro del marco normativo correspondiente.</p>
             </div>
           </div>
           <!-- End servicios Item -->
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="servicios-item featured" id="auditoria-gestion">
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400" id="auditoria-gestion">
+            <div class="servicios-item featured">
               <h3>Auditoría de Gestión</h3>
-              <p style="text-align: justify;">Vamos más allá de los números para evaluar el desempeño de la administración en el logro de los objetivos estratégicos de la empresa. Analizamos la efectividad de las políticas, la toma de decisiones y la estructura organizacional para ofrecer una visión clara sobre el rendimiento directivo y la alineación de la gestión con la visión de la compañía.</p>
+              <p style="text-align: justify;">Vamos más allá de los números para evaluar el desempeño de la
+                administración en el logro de los objetivos estratégicos de la empresa. Analizamos la efectividad de las
+                políticas, la toma de decisiones y la estructura organizacional para ofrecer una visión clara sobre el
+                rendimiento directivo y la alineación de la gestión con la visión de la compañía.</p>
             </div>
           </div>
           <!-- End servicios Item -->
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="servicios-item featured" id="auditoria-sistemas">
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400" id="auditoria-sistemas">
+            <div class="servicios-item featured">
               <h3>Auditoría de Sistemas (TI)</h3>
-              <p style="text-align: justify;">En un mundo digital, la seguridad de su información es vital. Evaluamos la integridad, fiabilidad y seguridad de sus sistemas de información y tecnología (TI). Analizamos sus controles, infraestructura y políticas de ciberseguridad para proteger sus datos, asegurar la continuidad del negocio y garantizar que la tecnología respalde eficazmente sus objetivos.</p>
+              <p style="text-align: justify;">En un mundo digital, la seguridad de su información es vital. Evaluamos la
+                integridad, fiabilidad y seguridad de sus sistemas de información y tecnología (TI). Analizamos sus
+                controles, infraestructura y políticas de ciberseguridad para proteger sus datos, asegurar la
+                continuidad del negocio y garantizar que la tecnología respalde eficazmente sus objetivos.</p>
             </div>
           </div>
           <!-- End servicios Item -->
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="servicios-item featured" id="auditoria-gubernamental">
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400" id="auditoria-gubernamental">
+            <div class="servicios-item featured">
               <h3>Auditoría Gubernamental</h3>
-              <p style="text-align: justify;">Ofrecemos servicios especializados para entidades del sector público, enfocados en garantizar la transparencia, la rendición de cuentas y el uso eficiente de los fondos públicos. Nuestra auditoría se realiza en estricto apego a la normativa gubernamental aplicable, fortaleciendo la confianza ciudadana y la gestión pública.</p>
+              <p style="text-align: justify;">Ofrecemos servicios especializados para entidades del sector público,
+                enfocados en garantizar la transparencia, la rendición de cuentas y el uso eficiente de los fondos
+                públicos. Nuestra auditoría se realiza en estricto apego a la normativa gubernamental aplicable,
+                fortaleciendo la confianza ciudadana y la gestión pública.</p>
             </div>
           </div>
           <!-- End servicios Item -->
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="servicios-item featured" id="auditoria-cierre-ejercicio">
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400" id="auditoria-cierre-ejercicio">
+            <div class="servicios-item featured">
               <h3>Auditoría de Cierre de Ejercicio</h3>
-              <p style="text-align: justify;">Le asistimos en el proceso crítico de cierre contable y fiscal anual. Revisamos y validamos las cifras, realizamos los ajustes necesarios y preparamos su información para la presentación de los estados financieros finales y las declaraciones correspondientes. Asegure un cierre ordenado, preciso y sin contratiempos.</p>
+              <p style="text-align: justify;">Le asistimos en el proceso crítico de cierre contable y fiscal anual.
+                Revisamos y validamos las cifras, realizamos los ajustes necesarios y preparamos su información para la
+                presentación de los estados financieros finales y las declaraciones correspondientes. Asegure un cierre
+                ordenado, preciso y sin contratiempos.</p>
             </div>
           </div>
           <!-- End servicios Item -->
 
+        </div>
+
+        <div id="servicios-contables">
+          <h3>Servicios Contables</h3>
+          <p>En Auditores Asociados S.A., ofrecemos un portafolio completo de servicios de auditoría diseñados para
+            fortalecer su empresa, garantizar el cumplimiento y proporcionar la confianza que necesita para tomar
+            decisiones estratégicas.</p>
+        </div>
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-lg-10" data-aos="fade-up" data-aos-delay="100">
+              <div class="faq-container">
+                <div class="faq-item">
+                  <h3>Servicios de Certificación</h3>
+                  <div class="faq-content">
+                    <p>Ofrecemos certificaciones emitidas por un Contador Público autorizado, dotando a sus documentos
+                      financieros de fe pública y validez legal. Este servicio es indispensable para trámites bancarios
+                      (préstamos), participación en licitaciones, procesos legales o para presentar ante cualquier
+                      entidad que requiera una constancia fidedigna de sus ingresos, estados financieros u otras
+                      realidades económicas de su empresa.
+                    </p>
+                  </div>
+                  <i class="faq-toggle bi bi-chevron-right"></i>
+                </div>
+                <!-- End Faq item-->
+
+                <div class="faq-item">
+                  <h3>Preparación de Estados Financieros</h3>
+                  <div class="faq-content">
+                    <p>Traducimos sus registros contables en un conjunto de Estados Financieros claros, precisos y
+                      estructurados conforme a las Normas Internacionales de Información Financiera (NIIF). Le
+                      entregamos el Balance General, Estado de Resultados, Flujo de Efectivo y Estado de Cambios en el
+                      Patrimonio, herramientas esenciales para que la gerencia, la junta directiva y los inversionistas
+                      puedan evaluar el desempeño y la salud financiera de la organización.
+                    </p>
+                  </div>
+                  <i class="faq-toggle bi bi-chevron-right"></i>
+                </div>
+                <!-- End Faq item-->
+
+                <div class="faq-item">
+                  <h3>Trámites e Inscripción de Sociedades</h3>
+                  <div class="faq-content">
+                    <p>Le guiamos en el proceso completo para constituir legalmente su nueva empresa en El Salvador. Nos
+                      encargamos de todos los pasos críticos: desde la elaboración de la escritura de constitución hasta
+                      la inscripción en el Centro Nacional de Registros (CNR), la obtención de NIT, el registro de IVA
+                      en el Ministerio de Hacienda y la matrícula de comercio. Ahorre tiempo y asegure un inicio de
+                      operaciones correcto y sin contratiempos.
+                    </p>
+                  </div>
+                  <i class="faq-toggle bi bi-chevron-right"></i>
+                </div>
+                <!-- End Faq item-->
+
+                <div class="faq-item">
+                  <h3>Autorización de Libros Contables y Legales</h3>
+                  <div class="faq-content">
+                    <p>Todo negocio necesita un fundamento legal sólido. Gestionamos la autorización y legalización de
+                      sus libros contables (Diario, Mayor) y corporativos (Actas, Registro de Accionistas) ante las
+                      instituciones correspondientes. Aseguramos que su empresa cumpla desde el primer día con todos los
+                      requisitos del Código de Comercio y la normativa tributaria, evitando futuras observaciones y
+                      sanciones.
+                    </p>
+                  </div>
+                  <i class="faq-toggle bi bi-chevron-right"></i>
+                </div>
+                <!-- End Faq item-->
+
+                <div class="faq-item">
+                  <h3>Revisión y Evaluación de Sistemas Contables</h3>
+                  <div class="faq-content">
+                    <p>Realizamos un diagnóstico completo de sus herramientas y procesos contables actuales. Evaluamos
+                      si su software y sus flujos de trabajo son eficientes, seguros y escalables para el futuro de su
+                      negocio. Nuestro objetivo es identificar áreas de mejora, optimizar sus recursos y garantizar que
+                      la información que genera su sistema sea íntegra, fiable y oportuna para la toma de decisiones.
+                    </p>
+                  </div>
+                  <i class="faq-toggle bi bi-chevron-right"></i>
+                </div>
+                <!-- End Faq item-->
+
+                <div class="faq-item">
+                  <h3>Análisis e Interpretación de Resultados</h3>
+                  <div class="faq-content">
+                    <p>Vamos más allá de solo preparar sus informes; le ayudamos a entenderlos. Traducimos sus estados
+                      financieros en inteligencia de negocio, analizando indicadores clave de rentabilidad, liquidez y
+                      endeudamiento. Le proporcionamos una visión clara de las tendencias y el rendimiento de su
+                      empresa, permitiéndole tomar decisiones informadas y desarrollar estrategias efectivas para el
+                      futuro.
+                    </p>
+                  </div>
+                  <i class="faq-toggle bi bi-chevron-right"></i>
+                </div>
+                <!-- End Faq item-->
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
