--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
             fortalecer su empresa, garantizar el cumplimiento y proporcionar la confianza que necesita para tomar
             decisiones estratégicas.</p>
         </div>
-        <div class="container">
+        <div class="container faq section light-background">
           <div class="row justify-content-center">
             <div class="col-lg-10" data-aos="fade-up" data-aos-delay="100">
               <div class="faq-container">
@@ -690,7 +690,7 @@
     <!-- /servicios Section -->
 
     <!-- Faq Section -->
-    <section id="faq" class="faq section light-background">
+    <section id="faq" >
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>F.A.Q</h2>
