--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
         </div>
 
         <div id="servicios-contables" class="mt-4">
-          <h3>Servicios Contables</h3>
+          <h3 class="mt-3">Servicios Contables</h3>
           <p>En Auditores Asociados S.A., ofrecemos un portafolio completo de servicios de auditoría diseñados para
             fortalecer su empresa, garantizar el cumplimiento y proporcionar la confianza que necesita para tomar
             decisiones estratégicas.</p>
