--- a/index.html
+++ b/index.html
@@ -92,19 +92,25 @@
                   </ul>
                 </li>
                 <li class="dropdown">
-                  <a href="#"><span>Servicios Contables</span>
+                  <a href="#servicios-contables"><span>Servicios Contables</span>
                     <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                   <ul>
-                    <li><a href="#">Servicios de Certificación</a></li>
+                    <li><a href="#servicios-certificacion">Servicios de Certificación</a></li>
                     <li>
-                      <a href="#">Preparación de Estados Financieros</a>
+                      <a href="#servicios-estados-financieros">Preparación de Estados Financieros</a>
                     </li>
                     <li>
-                      <a href="#">Tramites de Inscripción de Sociedades</a>
+                      <a href="#servicios-sociedades">Tramites de Inscripción de Sociedades</a>
                     </li>
                     <li>
-                      <a href="#">Revisión y Evaluación de instrumentos y Sistemas
+                      <a href="#servicios-libros-contables">Libros Contables y Legales</a>
+                    </li>
+                    <li>
+                      <a href="#servicios-revision">Revisión y Evaluación de instrumentos y Sistemas
                         Contables</a>
+                    </li>
+                    <li>
+                      <a href="#servicios-analisis-de-resultados">Análisis e interpretación de resultados obtenidos</a>
                     </li>
                   </ul>
                 </li>
@@ -599,7 +605,7 @@
           <div class="row justify-content-center">
             <div class="col-lg-10" data-aos="fade-up" data-aos-delay="100">
               <div class="faq-container">
-                <div class="faq-item">
+                <div class="faq-item" id="servicios-certificacion">
                   <h3>Servicios de Certificación</h3>
                   <div class="faq-content">
                     <p>Ofrecemos certificaciones emitidas por un Contador Público autorizado, dotando a sus documentos
@@ -613,7 +619,7 @@
                 </div>
                 <!-- End Faq item-->
 
-                <div class="faq-item">
+                <div class="faq-item" id="servicios-estados-financieros">
                   <h3>Preparación de Estados Financieros</h3>
                   <div class="faq-content">
                     <p>Traducimos sus registros contables en un conjunto de Estados Financieros claros, precisos y
@@ -627,7 +633,7 @@
                 </div>
                 <!-- End Faq item-->
 
-                <div class="faq-item">
+                <div class="faq-item" id="servicios-sociedades">
                   <h3>Trámites e Inscripción de Sociedades</h3>
                   <div class="faq-content">
                     <p>Le guiamos en el proceso completo para constituir legalmente su nueva empresa en El Salvador. Nos
@@ -641,7 +647,7 @@
                 </div>
                 <!-- End Faq item-->
 
-                <div class="faq-item">
+                <div class="faq-item" id="servicios-libros-contables">
                   <h3>Autorización de Libros Contables y Legales</h3>
                   <div class="faq-content">
                     <p>Todo negocio necesita un fundamento legal sólido. Gestionamos la autorización y legalización de
@@ -655,7 +661,7 @@
                 </div>
                 <!-- End Faq item-->
 
-                <div class="faq-item">
+                <div class="faq-item" id="servicios-revision">
                   <h3>Revisión y Evaluación de Sistemas Contables</h3>
                   <div class="faq-content">
                     <p>Realizamos un diagnóstico completo de sus herramientas y procesos contables actuales. Evaluamos
@@ -668,7 +674,7 @@
                 </div>
                 <!-- End Faq item-->
 
-                <div class="faq-item">
+                <div class="faq-item" id="servicios-analisis-de-resultados">
                   <h3>Análisis e Interpretación de Resultados</h3>
                   <div class="faq-content">
                     <p>Vamos más allá de solo preparar sus informes; le ayudamos a entenderlos. Traducimos sus estados
@@ -689,124 +695,29 @@
     </section>
     <!-- /servicios Section -->
 
-    <!-- Faq Section -->
-    <section id="faq" >
+     <!-- objetivos Section -->
+    <section id="consultorias" class="objetivos section light-background">
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>F.A.Q</h2>
+        <h2>Consultorias</h2>
         <p>
-          <span>Frequently Asked</span>
-          <span class="description-title">Questions</span>
+          <span class="description-title">Consultorias</span>
+          <span>Especializadas</span>
         </p>
       </div>
       <!-- End Section Title -->
 
       <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-10" data-aos="fade-up" data-aos-delay="100">
-            <div class="faq-container">
-              <div class="faq-item faq-active">
-                <h3>Non consectetur a erat nam at lectus urna duis?</h3>
-                <div class="faq-content">
-                  <p>
-                    Feugiat pretium nibh ipsum consequat. Tempus iaculis urna
-                    id volutpat lacus laoreet non curabitur gravida. Venenatis
-                    lectus magna fringilla urna porttitor rhoncus dolor purus
-                    non.
-                  </p>
-                </div>
-                <i class="faq-toggle bi bi-chevron-right"></i>
-              </div>
-              <!-- End Faq item-->
+        <div class="row gy-4 justify-content-center">
 
-              <div class="faq-item">
-                <h3>Feugiat scelerisque varius morbi enim nunc faucibus?</h3>
-                <div class="faq-content">
-                  <p>
-                    Dolor sit amet consectetur adipiscing elit pellentesque
-                    habitant morbi. Id interdum velit laoreet id donec
-                    ultrices. Fringilla phasellus faucibus scelerisque
-                    eleifend donec pretium. Est pellentesque elit ullamcorper
-                    dignissim. Mauris ultrices eros in cursus turpis massa
-                    tincidunt dui.
-                  </p>
-                </div>
-                <i class="faq-toggle bi bi-chevron-right"></i>
-              </div>
-              <!-- End Faq item-->
-
-              <div class="faq-item">
-                <h3>
-                  Dolor sit amet consectetur adipiscing elit pellentesque?
-                </h3>
-                <div class="faq-content">
-                  <p>
-                    Eleifend mi in nulla posuere sollicitudin aliquam ultrices
-                    sagittis orci. Faucibus pulvinar elementum integer enim.
-                    Sem nulla pharetra diam sit amet nisl suscipit. Rutrum
-                    tellus pellentesque eu tincidunt. Lectus urna duis
-                    convallis convallis tellus. Urna molestie at elementum eu
-                    facilisis sed odio morbi quis
-                  </p>
-                </div>
-                <i class="faq-toggle bi bi-chevron-right"></i>
-              </div>
-              <!-- End Faq item-->
-
-              <div class="faq-item">
-                <h3>
-                  Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla?
-                </h3>
-                <div class="faq-content">
-                  <p>
-                    Dolor sit amet consectetur adipiscing elit pellentesque
-                    habitant morbi. Id interdum velit laoreet id donec
-                    ultrices. Fringilla phasellus faucibus scelerisque
-                    eleifend donec pretium. Est pellentesque elit ullamcorper
-                    dignissim. Mauris ultrices eros in cursus turpis massa
-                    tincidunt dui.
-                  </p>
-                </div>
-                <i class="faq-toggle bi bi-chevron-right"></i>
-              </div>
-              <!-- End Faq item-->
-
-              <div class="faq-item">
-                <h3>
-                  Tempus quam pellentesque nec nam aliquam sem et tortor?
-                </h3>
-                <div class="faq-content">
-                  <p>
-                    Molestie a iaculis at erat pellentesque adipiscing
-                    commodo. Dignissim suspendisse in est ante in. Nunc vel
-                    risus commodo viverra maecenas accumsan. Sit amet nisl
-                    suscipit adipiscing bibendum est. Purus gravida quis
-                    blandit turpis cursus in
-                  </p>
-                </div>
-                <i class="faq-toggle bi bi-chevron-right"></i>
-              </div>
-              <!-- End Faq item-->
-
-              <div class="faq-item">
-                <h3>Perspiciatis quod quo quos nulla quo illum ullam?</h3>
-                <div class="faq-content">
-                  <p>
-                    Enim ea facilis quaerat voluptas quidem et dolorem. Quis
-                    et consequatur non sed in suscipit sequi. Distinctio ipsam
-                    dolore et.
-                  </p>
-                </div>
-                <i class="faq-toggle bi bi-chevron-right"></i>
-              </div>
-              <!-- End Faq item-->
-            </div>
+          <div class="col-lg-8 d-flex flex-column justify-content-center">
+            
           </div>
-          <!-- End Faq Column-->
+
         </div>
       </div>
     </section>
-    <!-- /Faq Section -->
+    <!-- /objetivos Section -->
 
     <!-- contactanos Section -->
     <section id="contactanos" class="contactanos section">
