--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
           <div class="row justify-content-center">
             <div class="col-lg-10" data-aos="fade-up" data-aos-delay="100">
               <div class="faq-container">
-                <div class="faq-item" id="servicios-certificacion">
+                <div class="faq-item servicios-certificacion " id="servicios-certificacion">
                   <h3>Servicios de Certificación</h3>
                   <div class="faq-content">
                     <p>Ofrecemos certificaciones emitidas por un Contador Público autorizado, dotando a sus documentos
