--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
           <div class="row justify-content-center">
             <div class="col-lg-10" data-aos="fade-up" data-aos-delay="100">
               <div class="faq-container">
-                <div class="faq-item" style="scroll-margin-top: 100px;" id="servicios-certificacion">
+                <div class="faq-item" id="servicios-certificacion">
                   <h3>Servicios de Certificación</h3>
                   <div class="faq-content">
                     <p>Ofrecemos certificaciones emitidas por un Contador Público autorizado, dotando a sus documentos
@@ -695,7 +695,7 @@
     </section>
     <!-- /servicios Section -->
 
-     <!-- objetivos Section -->
+    <!-- objetivos Section -->
     <section id="consultorias" class="objetivos section light-background">
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -711,7 +711,7 @@
         <div class="row gy-4 justify-content-center">
 
           <div class="col-lg-8 d-flex flex-column justify-content-center">
-            
+
           </div>
 
         </div>
@@ -945,6 +945,44 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+
+  <script>
+    // Define la lista de IDs específicos para los que se aplicará el script
+    const targetIds = [
+      "#servicios-certificacion",
+      "#servicios-estados-financieros",
+      "#servicios-sociedades",
+      "#servicios-libros-contables",
+      "#servicios-revision",
+      "#servicios-analisis-de-resultados"
+    ];
+
+    // Construye el selector de CSS para encontrar los enlaces que apuntan a esos IDs
+    const selector = targetIds.map(id => a[href = "${id}"]).join(', ');
+
+    // Selecciona solo los enlaces que coinciden con la lista
+    document.querySelectorAll(selector).forEach(anchor => {
+      anchor.addEventListener('click', function (e) {
+        // Previene el salto instantáneo por defecto
+        e.preventDefault();
+
+        const targetId = this.getAttribute('href');
+        const targetElement = document.querySelector(targetId);
+
+        if (targetElement) {
+          const offset = 80; // Tu offset de 80px
+          const elementPosition = targetElement.getBoundingClientRect().top;
+          const offsetPosition = elementPosition + window.pageYOffset - offset;
+
+          // Realiza el scroll suave a la posición calculada
+          window.scrollTo({
+            top: offsetPosition,
+            behavior: "smooth"
+          });
+        }
+      });
+    });
+  </script>
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
