--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <!-- End Section Title -->
 
       <div class="container">
-        <div class="row gy-3">
+        <div class="row gy-3" data-aos="fade-up">
           <p style="text-align: justify;">
             Auditores Asociados, S.A. fundada por Snayda Campos, Milton
             Campos, Carlos Mejía y Melissa Martínez en el año 2025 en la
@@ -695,8 +695,8 @@
     </section>
     <!-- /servicios Section -->
 
-    <!-- objetivos Section -->
-    <section id="consultorias" class="objetivos section light-background">
+
+    <section id="consultorias" class="featured-services section light-background">
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Consultorias</h2>
@@ -710,14 +710,57 @@
       <div class="container">
         <div class="row gy-4 justify-content-center">
 
-          <div class="col-lg-8 d-flex flex-column justify-content-center">
+          <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
+            <div class="service-item position-relative">
+              <div class="icon"><i class="bi bi-activity icon"></i></div>
+              <h4><a href="" class="stretched-link">Lorem Ipsum</a></h4>
+              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+            </div>
+          </div><!-- End Service Item -->
 
-          </div>
+          <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="200">
+            <div class="service-item position-relative">
+              <div class="icon"><i class="bi bi-bounding-box-circles icon"></i></div>
+              <h4><a href="" class="stretched-link">Sed ut perspici</a></h4>
+              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+            </div>
+          </div><!-- End Service Item -->
+
+          <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
+            <div class="service-item position-relative">
+              <div class="icon"><i class="bi bi-calendar4-week icon"></i></div>
+              <h4><a href="" class="stretched-link">Magni Dolores</a></h4>
+              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+            </div>
+          </div><!-- End Service Item -->
+
+          <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
+            <div class="service-item position-relative">
+              <div class="icon"><i class="bi bi-broadcast icon"></i></div>
+              <h4><a href="" class="stretched-link">Nemo Enim</a></h4>
+              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+            </div>
+          </div><!-- End Service Item -->
+
+
 
         </div>
       </div>
     </section>
-    <!-- /objetivos Section -->
+
+    <!-- Featured Services Section -->
+    <section id="featured-services" class="featured-services section">
+
+      <div class="container">
+
+        <div class="row gy-4">
+
+        </div>
+
+      </div>
+
+    </section><!-- /Featured-->
+
 
     <!-- contactanos Section -->
     <section id="contactanos" class="contactanos section">
