--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
       
     </section>
    <!-- Featured Services Section -->
-    <section id="featured-services" class="featured-services section">
+    <section id="featured-mision" class="featured-mision section">
 
       <div class="container">
 
