--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
     </section>
     <!-- /servicios Section -->
 
-      <section id="consultorias" class="consultorias section">
+      <section id="consultorias" class="featured-mision section">
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Consultorias</h2>
