--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="service-item position-relative">
-              <div class="icon"><i class="bi bi-activity icon"></i></div>
+              <div class="icon"><i class="bi bi-coin icon"></i></div>
               <h4><a class="stretched-link">Consultoría y Auditoria Financiera</a></h4>
             </div>
           </div>
@@ -725,36 +725,29 @@
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="service-item position-relative">
-              <div class="icon"><i class="bi bi-calendar4-week icon"></i></div>
-              <h4><a  class="stretched-link">Consultoría Auditoria de Sistema</a></h4>
+              <div class="icon"><i class="bi bi-display icon"></i></div>
+              <h4><a class="stretched-link">Consultoría Auditoria de Sistema</a></h4>
             </div>
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
             <div class="service-item position-relative">
-              <div class="icon"><i class="bi bi-broadcast icon"></i></div>
+              <div class="icon"><i class="bi bi-card-checklist icon"></i></div>
               <h4><a class="stretched-link">Consultoría de Cumplimiento</a></h4>
             </div>
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
             <div class="service-item position-relative">
-              <div class="icon"><i class="bi bi-broadcast icon"></i></div>
+              <div class="icon"><i class="bi bi-exclamation-triangle icon"></i></div>
               <h4><a class="stretched-link">Consultoría de Auditoria de Riesgos</a></h4>
             </div>
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
             <div class="service-item position-relative">
-              <div class="icon"><i class="bi bi-broadcast icon"></i></div>
+              <div class="icon"><i class="bi bi-bar-chart-line icon"></i></div>
               <h4><a class="stretched-link">Consultoría de Mejora continua</a></h4>
-            </div>
-          </div>
-
-          <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
-            <div class="service-item position-relative">
-              <div class="icon"><i class="bi bi-broadcast icon"></i></div>
-              <h4><a class="stretched-link">Consultoría de Cumplimiento</a></h4>
             </div>
           </div>
 
@@ -762,30 +755,35 @@
       </div>
 
     </section>
-   
+
     <section id="featured-mision" class="featured-mision section">
+      <div class="container section-title" data-aos="fade-up">
+        <p>
+          <span>Capacitaciones</span>
+        </p>
+      </div>
 
       <div class="container">
-        <h4>Capacitaciones</h4>
+        <h4></h4>
         <div class="row gy-4">
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="service-item position-relative">
-              <div class="icon"><i class="bi bi-activity icon"></i></div>
+              <div class="icon"><i class="bi bi-receipt-cutoff icon"></i></div>
               <h4><a class="stretched-link">Facturación Electrónica</a></h4>
             </div>
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item position-relative">
-              <div class="icon"><i class="bi bi-bounding-box-circles icon"></i></div>
+              <div class="icon"><i class="bi bi-keyboard icon"></i></div>
               <h4><a class="stretched-link">Usos tecnológicos </a></h4>
             </div>
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="service-item position-relative">
-              <div class="icon"><i class="bi bi-calendar4-week icon"></i></div>
+              <div class="icon"><i class="bi bi-list-ol icon"></i></div>
               <h4><a class="stretched-link">Obligaciones formales y sustantivas</a></h4>
             </div>
           </div>
@@ -802,8 +800,8 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>contactanos</h2>
         <p>
-          <span>Need Help?</span>
-          <span class="description-title">contactanos Us</span>
+          <span>¿Estás interesado?</span>
+          <span class="description-title">Contáctanos</span>
         </p>
       </div>
       <!-- End Section Title -->
@@ -815,8 +813,8 @@
               <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
-                  <h3>Address</h3>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <h3>Dirección</h3>
+                  <p>San Miguel, El Salvador</p>
                 </div>
               </div>
               <!-- End Info Item -->
@@ -824,8 +822,9 @@
               <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
-                  <h3>Call Us</h3>
-                  <p>+1 5589 55488 55</p>
+                  <h3>Llámanos</h3>
+                  <p>+503 2672 3001</p>
+                  <p>+503 6011 2330</p>
                 </div>
               </div>
               <!-- End Info Item -->
@@ -833,16 +832,11 @@
               <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
-                  <h3>Email Us</h3>
-                  <p>info@example.com</p>
+                  <h3>Envíanos un mensaje por correo</h3>
+                  <p>asociadosaudit ores95@gmail. com</p>
                 </div>
               </div>
               <!-- End Info Item -->
-
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus"
-                frameborder="0" style="border: 0; width: 100%; height: 270px" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
 
