--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Envíanos un mensaje por correo</h3>
-                  <p>asociadosaudit ores95@gmail. com</p>
+                  <p>asociadosauditores95@gmail.com</p>
                 </div>
               </div>
               <!-- End Info Item -->
@@ -845,33 +845,33 @@
               data-aos-delay="200">
               <div class="row gy-4">
                 <div class="col-md-6">
-                  <label for="name-field" class="pb-2">Your Name</label>
+                  <label for="name-field" class="pb-2">Nombre</label>
                   <input type="text" name="name" id="name-field" class="form-control" required="" />
                 </div>
 
                 <div class="col-md-6">
-                  <label for="email-field" class="pb-2">Your Email</label>
+                  <label for="email-field" class="pb-2">Correo</label>
                   <input type="email" class="form-control" name="email" id="email-field" required="" />
                 </div>
 
                 <div class="col-md-12">
-                  <label for="subject-field" class="pb-2">Subject</label>
+                  <label for="subject-field" class="pb-2">Asunto</label>
                   <input type="text" class="form-control" name="subject" id="subject-field" required="" />
                 </div>
 
                 <div class="col-md-12">
-                  <label for="message-field" class="pb-2">Message</label>
+                  <label for="message-field" class="pb-2">Mensaje</label>
                   <textarea class="form-control" name="message" rows="10" id="message-field" required=""></textarea>
                 </div>
 
                 <div class="col-md-12 text-center">
-                  <div class="loading">Loading</div>
+                  <div class="loading">Cargando</div>
                   <div class="error-message"></div>
                   <div class="sent-message">
-                    Your message has been sent. Thank you!
+                    Tu mensaje ha sido enviado. Gracias!
                   </div>
 
-                  <button type="submit">Send Message</button>
+                  <button type="submit">Enviar Mensaje</button>
                 </div>
               </div>
             </form>
@@ -884,95 +884,32 @@
   </main>
 
   <footer id="footer" class="footer">
-    <div class="footer-newsletter">
-      <div class="container">
-        <div class="row justify-content-center text-center">
-          <div class="col-lg-6">
-            <h4>Join Our Newsletter</h4>
-            <p>
-              Subscribe to our newsletter and receive the latest news
-              nuestrosvalores our products and mision!
-            </p>
-            <form action="forms/newsletter.php" method="post" class="php-email-form">
-              <div class="newsletter-form">
-                <input type="email" name="email" /><input type="submit" value="Subscribe" />
-              </div>
-              <div class="loading">Loading</div>
-              <div class="error-message"></div>
-              <div class="sent-message">
-                Your subscription request has been sent. Thank you!
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
 
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-nuestrosvalores">
           <a href="index.html" class="d-flex align-items-center">
-            <span class="sitename">BizLand</span>
+            <span class="sitename">Auditores Asociados S.A.</span>
           </a>
           <div class="footer-contactanos pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
+            <p>San Miguel, El Salvador</p>
             <p class="mt-3">
-              <strong>Phone:</strong> <span>+1 5589 55488 55</span>
+              <strong>Teléfono:</strong> <span>+503 2672 3001</span>
             </p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p><strong>Email:</strong> <span>asociadosauditores95@gmail.com</span></p>
           </div>
         </div>
 
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Useful Links</h4>
-          <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
-            <li>
-              <i class="bi bi-chevron-right"></i>
-              <a href="#">nuestrosvalores us</a>
-            </li>
-            <li>
-              <i class="bi bi-chevron-right"></i> <a href="#">mision</a>
-            </li>
-            <li>
-              <i class="bi bi-chevron-right"></i>
-              <a href="#">Terms of service</a>
-            </li>
-          </ul>
-        </div>
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our mision</h4>
-          <ul>
-            <li>
-              <i class="bi bi-chevron-right"></i> <a href="#">Web Design</a>
-            </li>
-            <li>
-              <i class="bi bi-chevron-right"></i>
-              <a href="#">Web Development</a>
-            </li>
-            <li>
-              <i class="bi bi-chevron-right"></i>
-              <a href="#">Product Management</a>
-            </li>
-            <li>
-              <i class="bi bi-chevron-right"></i> <a href="#">Marketing</a>
-            </li>
-          </ul>
-        </div>
+      
 
         <div class="col-lg-4 col-md-12">
-          <h4>Follow Us</h4>
+          <h4>Síguenos</h4>
           <p>
-            Cras fermentum odio eu feugiat lide par naso tierra videa magna
-            derita valies
+            Nuestras Redes Sociales
           </p>
           <div class="social-links d-flex">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
             <a href=""><i class="bi bi-facebook"></i></a>
             <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
       </div>
@@ -981,16 +918,9 @@
     <div class="container copyright text-center mt-4">
       <p>
         © <span>Copyright</span>
-        <strong class="px-1 sitename">BizLand</strong>
-        <span>All Rights Reserved</span>
+        <strong class="px-1 sitename">Auditores Asociados S.A.</strong>
+        <span>Todos los derechos reservados.</span>
       </p>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contactanos form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
     </div>
   </footer>
 
