--- a/index.html
+++ b/index.html
@@ -875,7 +875,7 @@
           <div class="col-lg-7">
             <form action="https://api.web3forms.com/submit" method="post" class="php-email-form" data-aos="fade-up"
               data-aos-delay="200" id="contact-form">
-              <input type="hidden" name="access_key" value="88914788-131d-4a9b-821c-58cf1ccd098d">
+              <input type="hidden" name="access_key" value="KEY">
               <div class="row gy-4">
                 <div class="col-md-6">
                   <label for="name-field" class="pb-2">Nombre</label>
