--- a/index.html
+++ b/index.html
@@ -960,7 +960,7 @@
             Nuestras Redes Sociales
           </p>
           <div>
-            <a href="https://www.instagram.com/audi_toresasociados/" target="_blank"><i class="bi bi-globe2"></i>
+            <a href=""><i class="bi bi-globe2"></i>
               www.AuditoresAsociadosS.A.com</a>
           </div>
           <div >
